v0.8.0/_sources/auto_tutorials/02_ui/viz_ui_listbox.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_tutorials/02_ui/viz_ui_listbox.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_tutorials_02_ui_viz_ui_listbox.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_tutorials_02_ui_viz_ui_listbox.py:


=========
ListBox
=========

This example shows how to use the UI API. We will create a list
some geometric shapes from FURY UI elements.

First, a bunch of imports.

.. GENERATED FROM PYTHON SOURCE LINES 12-15

.. code-block:: default

    from fury import ui, window
    from fury.data import fetch_viz_icons








.. GENERATED FROM PYTHON SOURCE LINES 16-17

First we need to fetch some icons that are included in FURY.

.. GENERATED FROM PYTHON SOURCE LINES 17-20

.. code-block:: default


    fetch_viz_icons()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Data size is approximately 12KB
    Dataset is already in place. If you want to fetch it again please first remove the folder /Users/koudoro/.fury/icons 

    ({'icomoon.tar.gz': ('https://digital.lib.washington.edu/researchworks/bitstream/handle/1773/38478/icomoon.tar.gz', 'BC1FEEA6F58BA3601D6A0B029EB8DFC5F352E21F2A16BA41099A96AA3F5A4735')}, '/Users/koudoro/.fury/icons')



.. GENERATED FROM PYTHON SOURCE LINES 21-23

Create some text blocks that will be shown when
list elements will be selected

.. GENERATED FROM PYTHON SOURCE LINES 23-31

.. code-block:: default


    welcome_text = ui.TextBlock2D(text="Welcome", font_size=30,
                                  position=(500, 400))
    bye_text = ui.TextBlock2D(text="Bye", font_size=30, position=(500, 400))
    fury_text = ui.TextBlock2D(text="Fury", font_size=30, position=(500, 400))

    example = [welcome_text, bye_text, fury_text]








.. GENERATED FROM PYTHON SOURCE LINES 32-33

Hide these text blocks for now

.. GENERATED FROM PYTHON SOURCE LINES 33-42

.. code-block:: default



    def hide_all_examples():
        for element in example:
            element.set_visibility(False)


    hide_all_examples()








.. GENERATED FROM PYTHON SOURCE LINES 43-44

Create ListBox with the values as parameter.

.. GENERATED FROM PYTHON SOURCE LINES 44-50

.. code-block:: default


    values = ["Welcome", "Bye", "Fury"]
    listbox = ui.ListBox2D(
        values=values, position=(10, 300), size=(200, 200), multiselection=False
    )








.. GENERATED FROM PYTHON SOURCE LINES 51-52

Function to show selected element.

.. GENERATED FROM PYTHON SOURCE LINES 52-62

.. code-block:: default



    def display_element():
        hide_all_examples()
        element = example[values.index(listbox.selected[0])]
        element.set_visibility(True)


    listbox.on_change = display_element








.. GENERATED FROM PYTHON SOURCE LINES 63-65

Now that all the elements have been initialised, we add them to the show
manager.

.. GENERATED FROM PYTHON SOURCE LINES 65-81

.. code-block:: default


    current_size = (800, 800)
    show_manager = window.ShowManager(size=current_size,
                                      title="FURY UI ListBox_Example")

    show_manager.scene.add(listbox)
    show_manager.scene.add(welcome_text)
    show_manager.scene.add(bye_text)
    show_manager.scene.add(fury_text)
    interactive = False

    if interactive:
        show_manager.start()

    window.record(show_manager.scene,
                  size=current_size, out_path="viz_listbox.png")



.. image-sg:: /auto_tutorials/02_ui/images/sphx_glr_viz_ui_listbox_001.png
   :alt: viz ui listbox
   :srcset: /auto_tutorials/02_ui/images/sphx_glr_viz_ui_listbox_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.131 seconds)


.. _sphx_glr_download_auto_tutorials_02_ui_viz_ui_listbox.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: viz_ui_listbox.py <viz_ui_listbox.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: viz_ui_listbox.ipynb <viz_ui_listbox.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
